Fix navigation color in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -95,7 +95,7 @@ html[data-theme='dark'] {
   --ifm-navbar-background-color: #162029; 
   --ifm-footer-background-color: #162029;
 
-  --ifm-menu-color: #ccf;
+  --ifm-menu-color: #e3ffe3;
   --ifm-menu-color-active: #fff;
   --ifm-menu-color-background-active: #121a21;
 }
